--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@
   justify-content: center;
 } */
 
-.footer {
+/* .footer {
   background: #333;
   color: white;
   text-align: center;
   padding: 1rem;
   margin-top: auto;
-}
+} */
